--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 
             <ul>
-                <li><i class="fa-solid fa-chart-column"></i> DashBoard</li>
-                <li><i class="fa-solid fa-briefcase"></i> Orders</li>
-                <li><i class="fa-solid fa-address-book"></i> Contact</li>
-                <li><i class="fa-solid fa-receipt"></i> Invoices</li>
-                <li><i class="fa-solid fa-boxes-packing"></i> Products</li>
+                <a href="index.html"><li><i class="fa-solid fa-chart-column"></i> DashBoard</li></a>
+                <a href="orders.html"><li><i class="fa-solid fa-briefcase"></i> Orders</li></a>
+                <a href="contact.html"><li><i class="fa-solid fa-address-book"></i> Contact</li></a>
+                <a href="invoices.html"><li><i class="fa-solid fa-receipt"></i> Invoices</li></a>
+                <a href="products.html"><li><i class="fa-solid fa-boxes-packing"></i> Products</li></a>
             </ul>
         </div>
         <div class="content">
@@ -34,11 +34,19 @@
                 
                 <i class="fa-solid fa-align-justify"></i>
                 <i class="fa-solid fa-circle-xmark"></i>
-                <i class="fa-solid fa-envelope"></i>
-                <i class="fa-solid fa-bell"></i>
-                <i class="fa-solid fa-gear"></i>
-                <i class="fa-solid fa-moon"></i>
-                <i class="fa-solid fa-sun"></i>
+        
+                    <input type="text" placeholder="Search...">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <button class="btn">Search</button>
+                <span>
+
+                    <i class="fa-solid fa-moon"></i>
+                    <i class="fa-solid fa-sun"></i>
+                    <i class="fa-solid fa-envelope"></i>
+                    <i class="fa-solid fa-bell"></i>
+                    <i class="fa-solid fa-gear"></i>
+
+                </span>
 
             </div>
             <div class="area cards">
