--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="page">
         <div class="sidebar">
-            <span>Admin</span>
+          <div class="admin">Admin</div>
 
 
             <ul>
@@ -37,7 +37,7 @@
         
                     <input type="text" placeholder="Search...">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                    <button class="btn">Search</button>
+                    <!-- <button class="btn">Search</button> -->
                 <span>
 
                     <i class="fa-solid fa-moon"></i>
