--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="orders.html"><li><i class="fa-solid fa-briefcase"></i> Orders</li></a>
                 <a href="contact.html"><li><i class="fa-solid fa-address-book"></i> Contact</li></a>
                 <a href="invoices.html"><li><i class="fa-solid fa-receipt"></i> Invoices</li></a>
-                <a href="products.html"><li><i class="fa-solid fa-boxes-packing"></i> Products</li></a>
+                <a href="inventory.html"><li><i class="fa-solid fa-boxes-packing"></i> Inventory</li></a>
             </ul>
         </div>
         <div class="content">
