--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
             <div class="area cards">
                 <ul>
                     <li>
-                        <div><span>100</span> Clients</div>
+                        <div class="client"><span>100</span> Clients</div>
                     </li>
                     <li>
-                        <div><span>500</span> Items</div>
+                        <div class="items"><span>500</span> Items</div>
                     </li>
                     <li>
-                        <div><span>15</span> Countries</div>
+                        <div class="countries"><span>15</span> Countries</div>
                     </li>
                     <li>
-                        <div><span>88</span> Orders</div>
+                        <div class="orders"><span>88</span> Orders</div>
                     </li>
                 </ul>
             </div>
