--- a/index.html
+++ b/index.html
@@ -18,28 +18,39 @@
 <body>
     <div class="page">
         <div class="sidebar">
-          <div class="admin">Admin</div>
+            <div class="admin">Admin</div>
 
 
             <ul>
-                <a href="index.html"><li><i class="fa-solid fa-chart-column"></i> DashBoard</li></a>
-                <a href="orders.html"><li><i class="fa-solid fa-briefcase"></i> Orders</li></a>
-                <a href="contact.html"><li><i class="fa-solid fa-address-book"></i> Contact</li></a>
-                <a href="invoices.html"><li><i class="fa-solid fa-receipt"></i> Invoices</li></a>
-                <a href="inventory.html"><li><i class="fa-solid fa-boxes-packing"></i> Inventory</li></a>
+                <a href="index.html">
+                    <li><i class="fa-solid fa-chart-column"></i> DashBoard</li>
+                </a>
+                <a href="orders.html">
+                    <li><i class="fa-solid fa-briefcase"></i> Orders</li>
+                </a>
+                <!-- <a href="contact.html">
+                    <li><i class="fa-solid fa-address-book"></i> Contact</li>
+                </a> -->
+                <!-- <a href="invoices.html">
+                    <li><i class="fa-solid fa-receipt"></i> Invoices</li>
+                </a> -->
+                <a href="inventory.html">
+                    <li><i class="fa-solid fa-boxes-packing"></i> Inventory</li>
+                </a>
             </ul>
         </div>
         <div class="content">
             <div class="navbar">
-                
+
                 <i class="fa-solid fa-align-justify"></i>
                 <i class="fa-solid fa-circle-xmark"></i>
-        
-                    <input type="text" placeholder="Search...">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <!-- <button class="btn">Search</button> -->
+
+                <input type="text" placeholder="Search...">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <!-- <button class="btn">Search</button> -->
                 <span>
 
+                    <a href="registration/sign.html">Register</a>
                     <i class="fa-solid fa-moon"></i>
                     <i class="fa-solid fa-sun"></i>
                     <i class="fa-solid fa-envelope"></i>
@@ -147,6 +158,7 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
