--- a/registration/sign.html
+++ b/registration/sign.html
@@ -6,10 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="stylesheet" href="sign.css">
+
 </head>
 
 <body>
+    <div class="container">
+        <div class="forms">
+            <div class="form login">
+                <span class="title">Login</span>
+                <form action="#">
+                    <div class="input-field">
+                        <input type="text" placeholder="Enter your email" required>
+                        <i class="uil uil-envelope"></i>
+                    </div>
+                </form>
+                <form action="#">
+                    <div class="input-field">
+                        <input type="password" placeholder="Enter your password" required>
+                        <i class="uil uil-lock"></i>
+                    </div>
+                </form>
 
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
