--- a/registration/sign.html
+++ b/registration/sign.html
@@ -19,17 +19,23 @@
                 <form action="#">
                     <div class="input-field">
                         <input type="text" placeholder="Enter your email" required>
-                        <i class="uil uil-envelope"></i>
+                        <i class="uil uil-envelope icon"></i>
                     </div>
                 </form>
                 <form action="#">
                     <div class="input-field">
                         <input type="password" placeholder="Enter your password" required>
-                        <i class="uil uil-lock"></i>
+                        <i class="uil uil-lock icon"></i>
+                        <i class="uil uil-eye-slash showHidePw"></i>
+                    </div>
+                    <div class="checkbox-text">
+                        <div class="checkbox-content">
+                            <input type="checkbox" id="logCheck">
+                            <label for="logCheck" class="text">Remember me</label>
+                        </div>
+                        <a href="#" class="text">Forgot Password?</a>
                     </div>
                 </form>
-
-
             </div>
         </div>
     </div>
