--- a/registration/sign.html
+++ b/registration/sign.html
@@ -24,7 +24,7 @@
                 </form>
                 <form action="#">
                     <div class="input-field">
-                        <input type="password" placeholder="Enter your password" required>
+                        <input type="password" class="password" placeholder="Enter your password" required>
                         <i class="uil uil-lock icon"></i>
                         <i class="uil uil-eye-slash showHidePw"></i>
                     </div>
@@ -35,10 +35,65 @@
                         </div>
                         <a href="#" class="text">Forgot Password?</a>
                     </div>
+
+                    <div class="input-field button">
+                        <input type="button" value="Login Now">
+                    </div>
                 </form>
+
+                <div class="login-signup">
+                    <span class="text">Not a member?
+                        <a href="#" class="text signup-text">Signup now</a>
+                    </span>
+                </div>
+            </div>
+
+
+
+            <!-- Registration Form -->
+            <div class="form login">
+                <span class="title">Registration</span>
+
+
+                <form action="#">
+                    <div class="input-field">
+                        <input type="text" placeholder="Enter your name" required>
+                        <i class="uil uil-user"></i>
+                    </div>
+                    <div class="input-field">
+                        <input type="text" placeholder="Enter your email" required>
+                        <i class="uil uil-envelope icon"></i>
+                    </div>
+                </form>
+                <form action="#">
+                    <div class="input-field">
+                        <input type="password" class="password" placeholder="Enter your password" required>
+                        <i class="uil uil-lock icon"></i>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" class="password" placeholder="Enter your password" required>
+                        <i class="uil uil-lock icon"></i>
+                        <i class="uil uil-eye-slash showHidePw"></i>
+                    </div>
+                    <div class="checkbox-text">
+                        <div class="checkbox-content">
+                            <input type="checkbox" id="logCheck">
+                            <label for="logCheck" class="text">Remember me</label>
+                        </div>
+                        <a href="#" class="text">Forgot Password?</a>
+                    </div>
+                    <div class="input-field button">
+                        <input type="button" value="Login Now">
+                    </div>
+                </form>
+                <div class="login-signup">
+                    <span class="text">Not a member?</span>
+                    <a href="#" class="text signup-text">Signup now</a>
+                </div>
             </div>
         </div>
     </div>
+    <script src="sign.js"></script>
 </body>
 
 </html>
