--- a/registration/sign.html
+++ b/registration/sign.html
@@ -43,7 +43,7 @@
 
                 <div class="login-signup">
                     <span class="text">Not a member?
-                        <a href="#" class="text signup-text">Signup now</a>
+                        <a href="#" class="text signup-link">Signup now</a>
                     </span>
                 </div>
             </div>
@@ -51,7 +51,7 @@
 
 
             <!-- Registration Form -->
-            <div class="form login">
+            <div class="form signup">
                 <span class="title">Registration</span>
 
 
@@ -67,11 +67,11 @@
                 </form>
                 <form action="#">
                     <div class="input-field">
-                        <input type="password" class="password" placeholder="Enter your password" required>
+                        <input type="password" class="password" placeholder="Create a password" required>
                         <i class="uil uil-lock icon"></i>
                     </div>
                     <div class="input-field">
-                        <input type="password" class="password" placeholder="Enter your password" required>
+                        <input type="password" class="password" placeholder="Confirm a password" required>
                         <i class="uil uil-lock icon"></i>
                         <i class="uil uil-eye-slash showHidePw"></i>
                     </div>
@@ -88,7 +88,7 @@
                 </form>
                 <div class="login-signup">
                     <span class="text">Not a member?</span>
-                    <a href="#" class="text signup-text">Signup now</a>
+                    <a href="#" class="text login-link">Signup now</a>
                 </div>
             </div>
         </div>
