adjust forgotpassword page

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
                 <i class="fa-solid fa-align-justify"></i>
                 <i class="fa-solid fa-circle-xmark"></i>
-
-                <input type="text" placeholder="Search...">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <form>
+                    <input type="text" placeholder="Search...">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </form>
                 <!-- <button class="btn">Search</button> -->
                 <span>
 
