--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
                 <i class="fa-solid fa-align-justify"></i>
                 <i class="fa-solid fa-circle-xmark"></i>
-                <form>
-                    <input type="text" placeholder="Search...">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </form>
+
+                <input type="text" placeholder="Search...">
+                <i class="fa-solid fa-magnifying-glass"></i>
+
                 <!-- <button class="btn">Search</button> -->
                 <span>
 
@@ -63,17 +63,17 @@
             </div>
             <div class="area cards">
                 <ul>
-                    <li>
-                        <div class="client"><span>100</span> Clients</div>
+                    <li class="client">
+                        <div><span>100</span> Clients</div>
                     </li>
-                    <li>
-                        <div class="items"><span>500</span> Items</div>
+                    <li class="items">
+                        <div><span>500</span> Items</div>
                     </li>
-                    <li>
-                        <div class="countries"><span>15</span> Countries</div>
+                    <li class="countries">
+                        <div><span>15</span> Countries</div>
                     </li>
-                    <li>
-                        <div class="orders"><span>88</span> Orders</div>
+                    <li class="orders">
+                        <div><span>88</span> Orders</div>
                     </li>
                 </ul>
             </div>
