--- a/orders.html
+++ b/orders.html
@@ -13,6 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700&family=Tajawal:wght@200;300;400;500;800&display=swap"
         rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css'>
 </head>
 
 <body>
@@ -60,6 +61,13 @@
 
                 </span>
 
+            </div>
+            <div class="add">
+
+                <button>
+                    <i class="fa-solid fa-plus"></i>
+                    <a href="add.html">Add Orders</a>
+                </button>
             </div>
             <div class="area cards">
                 <ul>
