--- a/add.html
+++ b/add.html
@@ -83,12 +83,14 @@
                 <form action="">
                     <span>
                         Customer Name : <input type="text">
-                        Order Type : <input type="text">
                         Customer Number : <input type="text">
+                        Order Type : <input type="text">
+                        Quntity : <input type="text">
                         Date Time : <input type="text">
-                        Description : <input type="text" class="discription">
+                        <!-- Description : <input type="text" class="discription"> -->
+                        Description : <br> <textarea class="txt" name="txtname" rows="4" cols="50" maxlength="200">
+                            </textarea>
                     </span>
-
                 </form>
             </div>
             <script src="script.js"></script>
