adjustment on form

--- a/add.html
+++ b/add.html
@@ -62,7 +62,7 @@
                 </span>
 
             </div>
-            <!-- 
+
             <div class="area cards">
                 <ul>
                     <li class="client">
@@ -78,12 +78,14 @@
                         <div><span>88</span> Orders</div>
                     </li>
                 </ul>
-            </div> -->
+            </div>
             <div class="add_form">
                 <form action="">
                     <span>
                         Customer Name : <input type="text">
                         Customer Number : <input type="text">
+                        Customer Email : <input type="text">
+                        Company Name : <input type="text">
                         Order Type : <input type="text">
                         Quntity : <input type="text">
                         Date Time : <input type="text">
