--- a/add.html
+++ b/add.html
@@ -93,9 +93,13 @@
                         Description : <br> <textarea class="txt" name="txtname" rows="4" cols="50" maxlength="200">
                             </textarea>
                     </span>
+                    <div class="submit-btn">
+                        <button>Submit</button>
+                    </div>
                 </form>
             </div>
             <script src="script.js"></script>
 </body>
 
 </html>
+<!--99-->
