--- a/inventory.html
+++ b/inventory.html
@@ -29,8 +29,8 @@
                 <a href="orders.html">
                     <li><i class="fa-solid fa-briefcase"></i> Orders</li>
                 </a>
-                <a href="clients.html">
-                    <li><i class="fa-solid fa-address-book"></i> Clients</li>
+                <a href="customers.html">
+                    <li><i class="fa-solid fa-address-book"></i> Customers</li>
                 </a>
                 <a href="inventory.html">
                     <li><i class="fa-solid fa-boxes-packing"></i> Inventory</li>
@@ -66,7 +66,7 @@
 
                 <button>
                     <i class="fa-solid fa-plus"></i>
-                    <a href="add.html">Add Orders</a>
+                    <a href="add.html">Add material</a>
                 </button>
             </div>
             <div class="area cards">
@@ -90,12 +90,10 @@
                     <thead>
                         <tr>
                             <td>#</td>
-                            <td>Name</td>
+                            <td>Type</td>
                             <td>Amount</td>
-                            <td>Orders</td>
                             <td>Price</td>
                             <td>Section</td>
-                            <td>Employee</td>
                         </tr>
                     </thead>
                     <tbody>
@@ -103,64 +101,36 @@
                             <td>01</td>
                             <td>Boxes</td>
                             <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
-                            <td>Mohammed</td>
+                            <td>5$</td>
+                            <td>Packaging</td>
                         </tr>
                         <tr>
                             <td>01</td>
                             <td>Boxes</td>
                             <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
-                            <td>Mohammed</td>
+                            <td>5$</td>
+                            <td>Packaging</td>
                         </tr>
                         <tr>
                             <td>01</td>
                             <td>Boxes</td>
                             <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
-                            <td>Mohammed</td>
+                            <td>5$</td>
+                            <td>Packaging</td>
                         </tr>
                         <tr>
                             <td>01</td>
                             <td>Boxes</td>
                             <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
-                            <td>Mohammed</td>
+                            <td>5$</td>
+                            <td>Packaging</td>
                         </tr>
                         <tr>
                             <td>01</td>
                             <td>Boxes</td>
                             <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
-                            <td>Mohammed</td>
-                        </tr>
-                        <tr>
-                            <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
-                            <td>Mohammed</td>
-                        </tr>
-                        <tr>
-                            <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
-                            <td>Mohammed</td>
+                            <td>5$</td>
+                            <td>Packaging</td>
                         </tr>
                     </tbody>
                 </table>
