--- a/staff.html
+++ b/staff.html
@@ -21,7 +21,6 @@
         <div class="sidebar">
             <div class="admin">Admin</div>
 
-
             <ul>
                 <a href="index.html">
                     <li><i class="fa-solid fa-chart-column"></i> DashBoard</li>
@@ -29,8 +28,8 @@
                 <a href="orders.html">
                     <li><i class="fa-solid fa-briefcase"></i> Orders</li>
                 </a>
-                <a href="clients.html">
-                    <li><i class="fa-solid fa-address-book"></i> Clients</li>
+                <a href="customers.html">
+                    <li><i class="fa-solid fa-address-book"></i>Customers</li>
                 </a>
                 <a href="inventory.html">
                     <li><i class="fa-solid fa-boxes-packing"></i> Inventory</li>
@@ -66,7 +65,7 @@
 
                 <button>
                     <i class="fa-solid fa-plus"></i>
-                    <a href="add.html">Add Orders</a>
+                    <a href="add.html">Add Staff</a>
                 </button>
             </div>
             <div class="area cards">
@@ -85,83 +84,101 @@
                     </li>
                 </ul>
             </div>
+
             <div class="area ">
                 <table>
                     <thead>
                         <tr>
                             <td>#</td>
                             <td>Name</td>
-                            <td>Amount</td>
-                            <td>Orders</td>
-                            <td>Price</td>
+                            <td>ID Num</td>
                             <td>Section</td>
-                            <td>Employee</td>
+                            <td>Salary</td>
+                            <td>DOB</td>
+                            <td>Phone Num</td>
+                            <td>Email Adress</td>
+                            <td>Nationality</td>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
                             <td>Mohammed</td>
+                            <td>28545435462</td>
+                            <td>Packaging</td>
+                            <td>250$</td>
+                            <td>1985/2/8</td>
+                            <td>55534709</td>
+                            <td>Mohammed@hotmail.com</td>
+                            <td>Muslim</td>
                         </tr>
                         <tr>
                             <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
                             <td>Mohammed</td>
+                            <td>28545435462</td>
+                            <td>Packaging</td>
+                            <td>250$</td>
+                            <td>1985/2/8</td>
+                            <td>55534709</td>
+                            <td>Mohammed@hotmail.com</td>
+                            <td>Muslim</td>
                         </tr>
                         <tr>
                             <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
                             <td>Mohammed</td>
+                            <td>28545435462</td>
+                            <td>Packaging</td>
+                            <td>250$</td>
+                            <td>1985/2/8</td>
+                            <td>55534709</td>
+                            <td>Mohammed@hotmail.com</td>
+                            <td>Muslim</td>
                         </tr>
                         <tr>
                             <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
                             <td>Mohammed</td>
+                            <td>28545435462</td>
+                            <td>Packaging</td>
+                            <td>250$</td>
+                            <td>1985/2/8</td>
+                            <td>55534709</td>
+                            <td>Mohammed@hotmail.com</td>
+                            <td>Muslim</td>
                         </tr>
                         <tr>
                             <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
                             <td>Mohammed</td>
+                            <td>28545435462</td>
+                            <td>Packaging</td>
+                            <td>250$</td>
+                            <td>1985/2/8</td>
+                            <td>55534709</td>
+                            <td>Mohammed@hotmail.com</td>
+                            <td>Muslim</td>
                         </tr>
                         <tr>
                             <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
                             <td>Mohammed</td>
+                            <td>28545435462</td>
+                            <td>Packaging</td>
+                            <td>250$</td>
+                            <td>1985/2/8</td>
+                            <td>55534709</td>
+                            <td>Mohammed@hotmail.com</td>
+                            <td>Muslim</td>
                         </tr>
                         <tr>
                             <td>01</td>
-                            <td>Boxes</td>
-                            <td>100</td>
-                            <td>5</td>
-                            <td>70$</td>
-                            <td>Packing</td>
                             <td>Mohammed</td>
+                            <td>28545435462</td>
+                            <td>Packaging</td>
+                            <td>250$</td>
+                            <td>1985/2/8</td>
+                            <td>55534709</td>
+                            <td>Mohammed@hotmail.com</td>
+                            <td>Muslim</td>
                         </tr>
+
                     </tbody>
                 </table>
             </div>
