--- a/add.html
+++ b/add.html
@@ -29,8 +29,8 @@
                 <a href="orders.html">
                     <li><i class="fa-solid fa-briefcase"></i> Orders</li>
                 </a>
-                <a href="clients.html">
-                    <li><i class="fa-solid fa-address-book"></i> Clients</li>
+                <a href="customers.html">
+                    <li><i class="fa-solid fa-address-book"></i> Customers</li>
                 </a>
                 <a href="inventory.html">
                     <li><i class="fa-solid fa-boxes-packing"></i> Inventory</li>
@@ -89,7 +89,6 @@
                         Order Type : <input type="text">
                         Quntity : <input type="text">
                         Date Time : <input type="text">
-                        <!-- Description : <input type="text" class="discription"> -->
                         Description : <br> <textarea class="txt" name="txtname" rows="4" cols="50" maxlength="200">
                             </textarea>
                     </span>
