--- a/customers.html
+++ b/customers.html
@@ -29,8 +29,8 @@
                 <a href="orders.html">
                     <li><i class="fa-solid fa-briefcase"></i> Orders</li>
                 </a>
-                <a href="clients.html">
-                    <li><i class="fa-solid fa-address-book"></i> Clients</li>
+                <a href="customers.html">
+                    <li><i class="fa-solid fa-address-book"></i> Customers</li>
                 </a>
                 <a href="inventory.html">
                     <li><i class="fa-solid fa-boxes-packing"></i> Inventory</li>
@@ -66,7 +66,7 @@
 
                 <button>
                     <i class="fa-solid fa-plus"></i>
-                    <a href="add.html">Add Orders</a>
+                    <a href="add.html">Add Customers</a>
                 </button>
             </div>
             <div class="area cards">
