--- a/orders.html
+++ b/orders.html
@@ -29,8 +29,8 @@
                 <a href="orders.html">
                     <li><i class="fa-solid fa-briefcase"></i> Orders</li>
                 </a>
-                <a href="clients.html">
-                    <li><i class="fa-solid fa-address-book"></i> Clients</li>
+                <a href="customers.html">
+                    <li><i class="fa-solid fa-address-book"></i> Customers</li>
                 </a>
                 <a href="inventory.html">
                     <li><i class="fa-solid fa-boxes-packing"></i> Inventory</li>
