--- a/staff.html
+++ b/staff.html
@@ -110,7 +110,7 @@
                             <td>1985/2/8</td>
                             <td>55534709</td>
                             <td>Mohammed@hotmail.com</td>
-                            <td>Muslim</td>
+                            <td>Indian</td>
                         </tr>
                         <tr>
                             <td>01</td>
@@ -121,7 +121,7 @@
                             <td>1985/2/8</td>
                             <td>55534709</td>
                             <td>Mohammed@hotmail.com</td>
-                            <td>Muslim</td>
+                            <td>Indian</td>
                         </tr>
                         <tr>
                             <td>01</td>
@@ -132,7 +132,7 @@
                             <td>1985/2/8</td>
                             <td>55534709</td>
                             <td>Mohammed@hotmail.com</td>
-                            <td>Muslim</td>
+                            <td>Indian</td>
                         </tr>
                         <tr>
                             <td>01</td>
@@ -143,7 +143,7 @@
                             <td>1985/2/8</td>
                             <td>55534709</td>
                             <td>Mohammed@hotmail.com</td>
-                            <td>Muslim</td>
+                            <td>Indian</td>
                         </tr>
                         <tr>
                             <td>01</td>
@@ -154,7 +154,7 @@
                             <td>1985/2/8</td>
                             <td>55534709</td>
                             <td>Mohammed@hotmail.com</td>
-                            <td>Muslim</td>
+                            <td>Indian</td>
                         </tr>
                         <tr>
                             <td>01</td>
@@ -165,7 +165,7 @@
                             <td>1985/2/8</td>
                             <td>55534709</td>
                             <td>Mohammed@hotmail.com</td>
-                            <td>Muslim</td>
+                            <td>Indian</td>
                         </tr>
                         <tr>
                             <td>01</td>
@@ -176,9 +176,8 @@
                             <td>1985/2/8</td>
                             <td>55534709</td>
                             <td>Mohammed@hotmail.com</td>
-                            <td>Muslim</td>
+                            <td>Indian</td>
                         </tr>
-
                     </tbody>
                 </table>
             </div>
