--- a/add.html
+++ b/add.html
@@ -23,7 +23,7 @@
 
 
             <ul>
-                <a href="index.html">
+                <a href="dashboard.html">
                     <li><i class="fa-solid fa-chart-column"></i> DashBoard</li>
                 </a>
                 <a href="orders.html">
