--- a/staff.html
+++ b/staff.html
@@ -22,7 +22,7 @@
             <div class="admin">Admin</div>
 
             <ul>
-                <a href="index.html">
+                <a href="dashboard.html">
                     <li><i class="fa-solid fa-chart-column"></i> DashBoard</li>
                 </a>
                 <a href="orders.html">
