--- a/dashboard.html
+++ b/dashboard.html
@@ -18,10 +18,8 @@
 
 <body>
     <div class="page">
-        <div class="sidebar">
+        <div class="sidebar open">
             <div class="admin">Admin</div>
-
-
             <ul>
                 <a href="dashboard.html">
                     <li><i class="fa-solid fa-chart-column"></i> DashBoard</li>
@@ -42,23 +40,22 @@
         </div>
         <div class="content">
             <div class="navbar">
+                <div class="icon">
 
-                <i class="fa-solid fa-align-justify"></i>
-                <i class="fa-solid fa-circle-xmark"></i>
+                    <i class="fa-solid fa-align-justify"></i>
+                </div>
+
 
                 <input type="text" placeholder="Search...">
                 <i class="fa-solid fa-magnifying-glass"></i>
 
-                <!-- <button class="btn">Search</button> -->
                 <span>
-
                     <a href="registration/sign.html">Register</a>
                     <i class="fa-solid fa-moon"></i>
                     <i class="fa-solid fa-sun"></i>
                     <i class="fa-solid fa-envelope"></i>
                     <i class="fa-solid fa-bell"></i>
                     <i class="fa-solid fa-gear"></i>
-
                 </span>
 
             </div>
@@ -68,7 +65,9 @@
                     <i class="fa-solid fa-plus"></i>
                     <a href="add.html">Add Orders</a>
                 </button>
+
             </div>
+
             <div class="area cards">
                 <ul>
                     <li class="client">
