--- a/staff.html
+++ b/staff.html
@@ -29,7 +29,7 @@
                     <li><i class="fa-solid fa-briefcase"></i> Orders</li>
                 </a>
                 <a href="customers.html">
-                    <li><i class="fa-solid fa-address-book"></i>Customers</li>
+                    <li><i class="fa-solid fa-address-book"></i> Customers</li>
                 </a>
                 <a href="inventory.html">
                     <li><i class="fa-solid fa-boxes-packing"></i> Inventory</li>
@@ -42,8 +42,9 @@
         <div class="content">
             <div class="navbar">
 
-                <i class="fa-solid fa-align-justify"></i>
-                <i class="fa-solid fa-circle-xmark"></i>
+                <div class="icon">
+                    <i class="fa-solid fa-align-justify"></i>
+                </div>
 
                 <input type="text" placeholder="Search...">
                 <i class="fa-solid fa-magnifying-glass"></i>
