--- a/customers.html
+++ b/customers.html
@@ -43,8 +43,9 @@
         <div class="content">
             <div class="navbar">
 
-                <i class="fa-solid fa-align-justify"></i>
-                <i class="fa-solid fa-circle-xmark"></i>
+                <div class="icon">
+                    <i class="fa-solid fa-align-justify"></i>
+                </div>
 
                 <input type="text" placeholder="Search...">
                 <i class="fa-solid fa-magnifying-glass"></i>
