--- a/staff.html
+++ b/staff.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="page">
-        <div class="sidebar">
+        <div class="sidebar open">
             <div class="admin">Admin</div>
 
             <ul>
