--- a/add.html
+++ b/add.html
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700&family=Tajawal:wght@200;300;400;500;800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/add.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
