--- a/dashboard.html
+++ b/dashboard.html
@@ -55,7 +55,10 @@
                     <i class="fa-solid fa-sun"></i>
                     <i class="fa-solid fa-envelope"></i>
                     <i class="fa-solid fa-bell"></i>
-                    <i class="fa-solid fa-gear"></i>
+                    <!-- <i class="fa-solid fa-gear"></i> -->
+
+                    <img src="/img/GEAR.png" alt="" srcset="">
+
                 </span>
 
             </div>
