--- a/staff.html
+++ b/staff.html
@@ -57,7 +57,7 @@
                     <i class="fa-solid fa-sun"></i>
                     <i class="fa-solid fa-envelope"></i>
                     <i class="fa-solid fa-bell"></i>
-                    <i class="fa-solid fa-gear"></i>
+                    <img src="/img/GEAR.png" alt="" srcset="">
 
                 </span>
 
