--- a/inventory.html
+++ b/inventory.html
@@ -67,7 +67,7 @@
 
                 <button>
                     <i class="fa-solid fa-plus"></i>
-                    <a href="add.html">Add material</a>
+                    <a href="add.html">Add Inventory</a>
                 </button>
             </div>
             <div class="area cards">
